check_output_8.txt
    Checking yamux v0.10.2
    Checking sb-transport v0.1.0 (/Users/bob/Desktop/Projects/ING/sing/singbox-rust/crates/sb-transport)
warning: unused import: `Method`
  --> crates/sb-transport/src/http2.rs:74:12
   |
74 | use http::{Method, Request, Uri};
   |            ^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: unused import: `BytesMut`
  --> crates/sb-transport/src/grpc.rs:43:25
   |
43 | use bytes::{Buf, Bytes, BytesMut};
   |                         ^^^^^^^^

warning: unused import: `futures::stream::Stream`
  --> crates/sb-transport/src/grpc.rs:44:5
   |
44 | use futures::stream::Stream;
   |     ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `TunnelRequest` and `TunnelResponse`
   --> crates/sb-transport/src/grpc.rs:204:22
    |
204 |         use tunnel::{TunnelRequest, TunnelResponse};
    |                      ^^^^^^^^^^^^^  ^^^^^^^^^^^^^^

warning: unused import: `futures::Stream`
  --> crates/sb-transport/src/multiplex.rs:85:5
   |
85 | use futures::Stream;
   |     ^^^^^^^^^^^^^^^

warning: unused import: `Control`
  --> crates/sb-transport/src/multiplex.rs:86:33
   |
86 | use yamux::{Config, Connection, Control, Mode};
   |                                 ^^^^^^^

warning: unused import: `std::sync::Arc`
  --> crates/sb-transport/src/circuit_breaker.rs:27:5
   |
27 | use std::sync::Arc;
   |     ^^^^^^^^^^^^^^

error[E0624]: method `next` is private
   --> crates/sb-transport/src/multiplex.rs:415:44
    |
415 |             while let Some(_) = connection.next().await {
    |                                            ^^^^ private method
    |
   ::: /Users/bob/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/yamux-0.10.2/src/connection.rs:374:5
    |
374 |     async fn next(&mut self) -> Result<Option<Stream>> {
    |     -------------------------------------------------- private method defined here

error[E0599]: no method named `poll_next_inbound` found for struct `yamux::Connection` in the current scope
   --> crates/sb-transport/src/multiplex.rs:675:43
    |
675 |             match poll_fn(|cx| connection.poll_next_inbound(cx)).await {
    |                                           ^^^^^^^^^^^^^^^^^ method not found in `yamux::Connection<Compat<tokio::net::TcpStream>>`

warning: unused import: `SinkExt`
  --> crates/sb-transport/src/grpc.rs:45:15
   |
45 | use futures::{SinkExt, StreamExt};
   |               ^^^^^^^

warning: unused variable: `cx`
   --> crates/sb-transport/src/http2.rs:381:48
    |
381 |     fn poll_shutdown(mut self: Pin<&mut Self>, cx: &mut Context<'_>) -> Poll<std::io::Result<()>> {
    |                                                ^^ help: if this is intentional, prefix it with an underscore: `_cx`
    |
    = note: `#[warn(unused_variables)]` on by default

warning: variable does not need to be mutable
   --> crates/sb-transport/src/http2.rs:381:22
    |
381 |     fn poll_shutdown(mut self: Pin<&mut Self>, cx: &mut Context<'_>) -> Poll<std::io::Result<()>> {
    |                      ----^^^^
    |                      |
    |                      help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by default

warning: unused variable: `error`
   --> crates/sb-transport/src/retry.rs:265:35
    |
265 |     pub fn is_transient_dns_error(error: &DialError) -> bool {
    |                                   ^^^^^ help: if this is intentional, prefix it with an underscore: `_error`

warning: unused variable: `is_timeout`
   --> crates/sb-transport/src/circuit_breaker.rs:399:36
    |
399 |     fn should_count_failure(&self, is_timeout: bool) -> bool {
    |                                    ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_is_timeout`

Some errors have detailed explanations: E0599, E0624.
For more information about an error, try `rustc --explain E0599`.
warning: `sb-transport` (lib) generated 12 warnings
error: could not compile `sb-transport` (lib) due to 2 previous errors; 12 warnings emitted
